# IRIM_Newton

./: .gitignore  MUJOCO_LOG.TXT  README.md  imgui.ini  pyproject.toml  pyrightconfig.json
projects/irim_newton/: .gitignore  README.md  pyproject.toml  setup.py
projects/irim_newton/assets/: README.md
projects/irim_newton/assets/allex_usd/: README.md
projects/irim_newton/assets/allex_usd/URDF_ALLEX_RightArm/: CMakeLists.txt
projects/irim_newton/assets/allex_usd/URDF_ALLEX_RightArm/config/: joint_names_URDF_ALLEX_RightArm.yaml
projects/irim_newton/assets/allex_usd/URDF_ALLEX_RightArm/launch/: gazebo.launch
projects/irim_newton/assets/allex_usd/URDF_ALLEX_RightArm/meshes/: elbow.STL  shoulder_roll.STL  wrist_pitch.STL
projects/irim_newton/assets/allex_usd/URDF_ALLEX_RightArm/urdf/: URDF_ALLEX_RightArm.urdf
projects/irim_newton/assets/allex_usd/allex_model_mjcf_250903/: allex_contact_sensor.xml
projects/irim_newton/assets/allex_usd/allex_model_mjcf_250903/mesh/: ALLEX_Base.stl  ALLEX_Chest_Cover.stl  ALLEX_Face.stl  ALLEX_Hand_Distal_Pad.stl  ALLEX_Hand_Middle_Frame1.stl  ALLEX_Hand_Middle_Frame2.stl  ALLEX_Hand_Middle_Pad.stl  ALLEX_Hand_Proximal_Frame1.stl  ALLEX_Left_Hand_Palm.stl  (+34 more)
projects/irim_newton/config/: extension.toml
projects/irim_newton/scripts/: list_envs.py  random_agent.py  zero_agent.py
projects/irim_newton/scripts/rsl_rl/: play.py  train.py
projects/irim_newton/source/allex_rl_dexblind/: __init__.py
projects/irim_newton/source/allex_rl_dexblind/assets/: __init__.py
projects/irim_newton/source/allex_rl_dexblind/tasks/: __init__.py
(+203 files in other folders)
