[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allex_rl_dexblind"
version = "0.1.0"
description = "ALLEX + Dexblind RL task with Newton physics"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
authors = [{ name = "IRIM" }]
keywords = ["extension", "isaaclab", "newton", "allex", "dexblind"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["source"]
